syntax = "proto3";

package net.ndolgov.restgatewaytest.api;

option java_multiple_files = false;
option java_package = "net.ndolgov.restgatewaytest.api";
option java_outer_classname = "TestServiceAProto";
option objc_class_prefix = "TS1P";

import "google/api/annotations.proto";

service TestServiceA {
    rpc Process (TestRequestA) returns (TestResponseA) {
        option (google.api.http) = {
            post: "/restgateway/test/testservicea"
            body: "*"
        };
    }
}

message TestRequestA {
    int64 requestId = 1;
}

message TestResponseA {
    bool success = 1;
    int64 requestId = 2;
    string result = 3;
}